# rules_elixir

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  elixir.bzl  elixir_app.bzl  elixir_build.bzl  elixir_bytecode.bzl  elixir_ebin_dir.bzl  elixir_escript_main.bzl  elixir_escript_main.exs  elixir_toolchain.bzl  erlang_app_filter_module_conflicts.bzl  ex_unit_test.bzl  iex_eval.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: publish-rabbitmq-bcr.yml  release.yml  test.yaml
bzlmod/: extensions.bzl
elixir/: BUILD.bazel  elixir_as_app.bzl
examples/basic/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/basic/lib/: basic.ex
examples/basic/test/: assertion_test.exs
examples/internal-elixir/: .bazelrc  BUILD.bazel  MODULE.bazel  use_default_shell_env.patch
examples/internal-elixir/test/: test_helper.exs
private/: elixir_build.bzl  elixir_bytecode.bzl  elixir_toolchain.bzl  erlang_app_filter_module_conflicts.bzl  ex_unit_test.bzl  iex_eval.bzl
repositories/: BUILD_external.tpl  BUILD_internal.tpl  elixir_config.bzl
test/: .bazelrc  BUILD.bazel  MODULE.bazel  escript_test.sh
test/test/: assertion_test.exs  empty_test.exs  failing_test.exs  helped_test.exs  test_helper.exs
tools/: BUILD.bazel  elixir_tool.bzl  elixir_vars.bzl
