load("@rules_elixir//:elixir_app.bzl", "elixir_app")
load("@rules_elixir//:ex_unit_test.bzl", "ex_unit_test")
load(
    "@rules_elixir//tools:elixir_vars.bzl",
    "ELIXIR_VARS_ENV_MAP",
    "ELIXIR_VARS_ENV_MAP_INTERNAL",
)
load("@rules_erlang//:escript.bzl", "escript_archive")

elixir_app(
    app_name = "basic",
)

escript_archive(
    name = "basic",
    app = ":erlang_app",
    headers = [
        "shebang",
        '{emu_args, "-escript main Elixir.Basic -hidden"}',
    ],
)

ex_unit_test(
    name = "assertion_test",
    srcs = [
        "test/assertion_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

ex_unit_test(
    name = "helped_test",
    srcs = [
        "test/test_helper.exs",
        "test/helped_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

ex_unit_test(
    name = "two_file_test",
    srcs = [
        "test/test_helper.exs",
        "test/assertion_test.exs",
        "test/helped_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

sh_test(
    name = "escript_test",
    size = "small",
    srcs = ["escript_test.sh"],
    data = [":basic"],
    env = select({
        "@erlang_config//:erlang_internal": ELIXIR_VARS_ENV_MAP_INTERNAL,
        "//conditions:default": ELIXIR_VARS_ENV_MAP,
    }),
    toolchains = ["@rules_elixir//tools:elixir_vars"],
)

# Below tests are intentially failing, and checked by
# .github/workflows/test.yaml

ex_unit_test(
    name = "failing_test",
    srcs = [
        "test/failing_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
    tags = ["manual"],
)

ex_unit_test(
    name = "broken_test",
    srcs = [
        "test/assertion_test.exs",
    ],
    elixir_opts = [
        "-e",
        "ExUnit.configure(seed: 0)",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
    tags = ["manual"],
)

ex_unit_test(
    name = "empty_test",
    srcs = [
        "test/test_helper.exs",
        "test/empty_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
    tags = ["manual"],
)
