module(
    name = "basic",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.15.3",
)
bazel_dep(
    name = "rules_elixir",
    version = "0.1.0",
)
local_path_override(
    module_name = "rules_elixir",
    path = "..",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)
use_repo(
    erlang_config,
    "erlang_config",
)
