load(
    ":elixir_tool.bzl",
    "elixir_tool",
)
load(
    ":elixir_vars.bzl",
    "elixir_vars",
)

package(
    default_visibility = ["//visibility:public"],
)

elixir_tool(
    name = "elixirc_wrapper",
    out = "elixirc",
    tool = "elixirc",
)

elixir_tool(
    name = "elixir_wrapper",
    out = "elixir",
    tool = "elixir",
)

elixir_tool(
    name = "iex_wrapper",
    out = "iex",
    tool = "iex",
)

elixir_vars(
    name = "elixir_vars",
)
