load("@rules_elixir//:elixir_app.bzl", "elixir_app")
load("@rules_elixir//:ex_unit_test.bzl", "ex_unit_test")
load("@rules_erlang//:escript.bzl", "escript_archive")

elixir_app(
    app_name = "basic",
)

escript_archive(
    name = "basic",
    app = ":erlang_app",
    headers = [
        "shebang",
        '{emu_args, "-escript main Elixir.Basic -hidden"}',
    ],
)

ex_unit_test(
    name = "assertion_test",
    srcs = [
        "test/assertion_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
    },
)

ex_unit_test(
    name = "helped_test",
    srcs = [
        "test/helped_test.exs",
    ],
    data = [
        "test/test_helper.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
    },
    elixir_opts = [
        "-r",
        "test/test_helper.exs",
    ],
)
