module(
    name = "basic",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.15.3",
)
archive_override(
    module_name = "rules_erlang",
    patch_strip = 1,
    patches = ["@//:use_default_shell_env.patch"],
    strip_prefix = "rules_erlang-symlinks-again",
    urls = [
        "https://github.com/rabbitmq/rules_erlang/archive/refs/heads/symlinks-again.zip",
    ],
)
bazel_dep(
    name = "rules_elixir",
    version = "0.1.0",
)
local_path_override(
    module_name = "rules_elixir",
    path = "../..",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)
erlang_config.internal_erlang_from_github_release(
    name = "26_2",
    pre_configure_cmds = [
        "printenv",
    ],
    extra_make_opts = ["-j 4"],
    sha256 = "de155c4ad9baab2b9e6c96dbd03bf955575a04dd6feee9c08758beb28484c9f6",
    version = "26.2.5",
)
use_repo(
    erlang_config,
    "erlang_config",
)

elixir_config = use_extension(
    "@rules_elixir//bzlmod:extensions.bzl",
    "elixir_config",
)
elixir_config.internal_elixir_from_github_release(
    name = "1_16",
    sha256 = "b9e845458e03d62a24325b8424069e401cc7468e21143ecbca5514724d7cbaa0",
    version = "1.16.1",
)
use_repo(
    elixir_config,
    "elixir_config",
)

register_toolchains(
    "@erlang_config//26_2:toolchain_major",
    "@erlang_config//26_2:toolchain_major_minor",
    "@elixir_config//1_16:toolchain",
)
